Bug 421213 - Can no longer copy/move files into a symlinked folder
Summary: Can no longer copy/move files into a symlinked folder
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.70.0
Platform: Manjaro Linux
: VHI normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: regression
: 420831 421312 421322 421483 421555 421581 421633 421671 421796 421861 422464 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-09 06:54 UTC by Bruno Guedes
Modified: 2020-06-05 10:30 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.70.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruno Guedes 2020-05-09 06:54:42 UTC
SUMMARY
unable to copy/move files into a linked folder

STEPS TO REPRODUCE
1. make a symbolic link of a folder
2. try to move/copy a file/folder into the created linked folder

OBSERVED RESULT

a 'folder already exists' popup suggesting you to rename the file.

EXPECTED RESULT

the expected result would be for the file to be copied inside the linked folder

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro Linux
(available in About System)
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION

attempting to copy the file using the 'cp "file_name" "linked_folder"'
or moving it with 'mv "file_name" "linked_folder"' works normally
Comment 1 Julian Steinmann 2020-05-10 15:21:48 UTC
Can confirm with Dolphin 20.07.70 on Neon unstable.
Comment 2 Julian Steinmann 2020-05-11 06:29:04 UTC
Adding the new information from 421312:

"Cut and paste used to work but after the updates on 2020-05-10 it no longer works when pasting a folder or file to a symbolic link directory." 
"The bug happens with symbolic links on the same partition as well as different partitions or disks."
Comment 3 Julian Steinmann 2020-05-11 06:30:07 UTC
*** Bug 421312 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2020-05-11 22:42:23 UTC
*** Bug 421322 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2020-05-12 16:28:09 UTC
*** Bug 421322 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2020-05-13 23:46:59 UTC
*** Bug 421483 has been marked as a duplicate of this bug. ***
Comment 7 Ben 2020-05-14 00:13:32 UTC
The bug is fixed on KDE Neon as of 2020-05-13.
Comment 8 Nate Graham 2020-05-14 20:47:38 UTC
Nah, it's still here. Git bisecting...
Comment 9 Ben 2020-05-14 20:54:11 UTC
I mean the problem no longer happens on the User Edition of KDE Neon. Maybe the repository rolled back to a working/older version of Dolphin or a lib.

Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Kernel Version: 4.15.0-99-generic
OS Type: 64-bit
Processors: 12 × Intel® Core™ i7-3930K CPU @ 3.20GHz
Memory: 31.4 GiB of RAM
Comment 10 Nate Graham 2020-05-14 21:25:02 UTC
Caused by https://phabricator.kde.org/D28902.
Comment 11 Méven Car 2020-05-15 07:02:42 UTC
Fix in https://phabricator.kde.org/D29767
Comment 12 Méven Car 2020-05-15 10:46:42 UTC
Git commit 8769b6360d87c1b688eac4d0ce97594351bad13c by Méven Car.
Committed on 15/05/2020 at 10:46.
Pushed by meven into branch 'master'.

CopyJob: Check if destination dir is a symlink

Summary:
FIXED-IN: 5.71

Test Plan: ctest

Reviewers: #frameworks, dfaure, ngraham

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29767

M  +30   -0    autotests/jobtest.cpp
M  +1    -0    autotests/jobtest.h
M  +1    -1    src/core/copyjob.cpp

https://commits.kde.org/kio/8769b6360d87c1b688eac4d0ce97594351bad13c
Comment 13 Nate Graham 2020-05-15 18:55:26 UTC
*** Bug 421555 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2020-05-15 20:31:33 UTC
*** Bug 421581 has been marked as a duplicate of this bug. ***
Comment 15 Nate Graham 2020-05-16 04:37:03 UTC
*** Bug 420831 has been marked as a duplicate of this bug. ***
Comment 16 tony 2020-05-16 07:46:09 UTC
is it possible to get 5.71
Comment 17 Méven Car 2020-05-16 08:15:00 UTC
Frameworks 5.71 is scheduled for release June 13th https://community.kde.org/Schedules/Frameworks

In the meantime, you can downgrade to KF 5.70 if you can, or compile 5.71 from source, or use kde neon unstable.

This is a bad regression, sorry for that dear users.
I added an autotest so that it cannot happen again undetected.
Comment 18 David Faure 2020-05-16 09:03:03 UTC
I just made a 5.70.1 tag and package for KIO, hopefully the Neon packagers will update KIO in Neon quickly.
Comment 19 Nate Graham 2020-05-16 13:31:09 UTC
There's now a bugfix 5.70.1 release which distros can pick up, so you should get the fix soon.
Comment 20 Nate Graham 2020-05-16 19:13:32 UTC
*** Bug 421633 has been marked as a duplicate of this bug. ***
Comment 21 319513897@outlook.com 2020-05-17 02:08:50 UTC
bug fixed at archlinux today
Comment 22 Patrick Silva 2020-05-17 18:30:11 UTC
*** Bug 421671 has been marked as a duplicate of this bug. ***
Comment 23 Nate Graham 2020-05-20 00:24:58 UTC
*** Bug 421796 has been marked as a duplicate of this bug. ***
Comment 24 Julian Steinmann 2020-05-21 12:21:18 UTC
*** Bug 421861 has been marked as a duplicate of this bug. ***
Comment 25 boospy 2020-05-22 21:00:39 UTC
Thanks a lot! Works now in NEON fine :)
Comment 26 Ben 2020-05-22 22:04:51 UTC
Verified not occurring on KDE Neon (User Edition) as of 2020-05-22.  Previously, on 2020-05-14 I thought it was fixed but at that time the bug stopped happening for subfolders in my symlinks, but I would still get the bug for pasting into the symlink folder.


Operating System: KDE neon 5.18
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.70.0
Qt Version: 5.14.2
Kernel Version: 4.15.0-101-generic
OS Type: 64-bit
Processors: 12 × Intel® Core™ i7-3930K CPU @ 3.20GHz
Memory: 31.4 GiB of RAM


$ dolphin --version
dolphin 20.04.1
Comment 27 Patrick Silva 2020-06-04 23:17:30 UTC
*** Bug 422464 has been marked as a duplicate of this bug. ***
Comment 28 K.J. Petrie 2020-06-05 10:30:59 UTC
Thanks a lot, too. The upgraded package has been picked up by PCLinuxOS and the problem here is fixed.