CopyJob: Check if destination dir is a symlink

Summary:
BUG: 421213
FIXED-IN: 5.71

Test Plan: ctest

Reviewers: #frameworks, dfaure, ngraham

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29767